manager: GetChatHistory
